name:                test-servant
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Mats Daniel Gustafsson
maintainer:          daniel@advancedtelematic.com
copyright:           2017 Mats Daniel Gustafsson
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , servant
                     , servant-server
                     , text
                     , warp
                     , wai
                     , wai-logger
  default-language:    Haskell2010

executable test-servant-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , test-servant
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/simple
